# django-addresses

./: README.md  pyproject.toml  requirements.txt
django_addresses/: apps.py
